# WeActRA4M1CMake

./: CMakeLists.txt  README.md
ra_cfg/fsp_cfg/bsp/: bsp_mcu_family_cfg.h  bsp_pin_cfg.h
ra_gen/: pin_data.c
src/: hal_entry.c
